--- a/index1.html
+++ b/index1.html
@@ -14,6 +14,8 @@
     <!-- Custom styles for this template -->
     <link href="css/scrolling-nav.css" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
 
     <!-- favicons-->
     <link rel="apple-touch-icon" sizes="57x57" href="favicons/apple-icon-57x57.png">
@@ -39,7 +41,7 @@
   <body id="page-top">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-unlvRed fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
           <img src="img/acm_logo2.png" style="height: 40px; width: 50px;">
@@ -53,13 +55,10 @@
                     <a class="nav-link js-scroll-trigger" href="#about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#services">What We Do</a>
+                    <a class="nav-link js-scroll-trigger" href="#services">Opportunities</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="/workshop">Workshop</a>
                 </li>
             </ul>
         </div>
@@ -70,6 +69,7 @@
       <div class="container container-table text-center">
         <h1 class="display-4 text-white">Welcome to UNLV ACM's Web Page!</h1>
         <p class="lead">You will find everything about UNLV ACM here!</p>
+        <a href="img/Fall18_FrstMeetFlyer-1.jpg" role="button" class="btn btn-outline-light" target="_blank">Our First Meeting</a>
       </div>
     </header>
 
@@ -126,32 +126,36 @@
       </div>
     </section>
 
-    <section id="events">
+    <section id="contact" class="bg-dark">
       <div class="container">
-        <div class="row">
-            <h2 class="col-lg-8 mx-auto text-center">Events</h2>
-            <div class="col-lg-12 mx-auto text-center">
-            </div>
-        </div>
-      </div>
-    </section>
-
-
-    <section id="contact">
-      <div class="container">
-        <div class="row">
+        <div class="row text-white">
             <h2 class="col-lg-8 mx-auto text-center">Contact Us</h2>
-            <div class="col-lg-12 mx-auto text-center">
+            <div class="col-lg-8 mx-auto text-center">
               <p class="lead">  Email: acm@unlv.edu </p>
-              <p class="lead"><a href="https://www.facebook.com/unlvacm/">Check out our Facebook </a></p>
-              <p class="lead"><a href="https://twitter.com/unlv_acm?lang=en">Check out our Twitter</a></p>
+              <ul class="list-inline">
+                <li class="list-inline-item">
+                  <a href="https://twitter.com/unlv_acm?lang=en" target="_blank" class="no-dec">
+                    <i class="fab fa-twitter fa-2x"></i>
+                  </a>
+                </li>
+                <li class="list-inline-item">
+                  <a href="https://www.instagram.com/unlvacm/" target="_blank" class="no-dec">
+                    <i class="fab fa-instagram fa-2x"></i>
+                  </a>
+                </li>
+                <li class="list-inline-item">
+                  <a href="https://www.facebook.com/unlvacm/" target="_blank" class="no-dec"> 
+                    <i class="fab fa-facebook-f fa-2x"></i> 
+                  </a>
+                </li>
+              </ul>
             </div>
         </div>
       </div>
     </section>
 
     <!-- Footer -->
-    <footer class="py-5 bg-dark">
+    <footer class="py-2 bg-black">
       <div class="container">
         <p class="m-0 text-center text-white">Copyright &copy; UNLV ACM</p>
       </div>
