adding problems page

--- a/index1.html
+++ b/index1.html
@@ -70,6 +70,7 @@
         <h1 class="display-4 text-white">Welcome to UNLV ACM's Web Page!</h1>
         <p class="lead">You will find everything about UNLV ACM here!</p>
         <a href="img/Fall18_FrstMeetFlyer-1.jpg" role="button" class="btn btn-outline-light" target="_blank">Our First Meeting</a>
+        <a href="problems.html" role="button" class="btn btn-outline-light" target="_blank">Problems</a>
       </div>
     </header>
 
