fixed the background cover

--- a/problems.html
+++ b/problems.html
@@ -39,7 +39,7 @@
 </head>
 
 <body>
-    <section id="problems" class="bg-ourRed">
+    <section id="problems">
         <div class="container-fluid">
             <div class="row">
                 <h1 class="display-4 col-lg-12 text-center text-white">Coding Problems!</h1>
@@ -53,7 +53,7 @@
                           <p class="lead"> Given a value, n, determine if n is a power of 2.
                           </p>
                         </div>
-                        <img class="card-img-bottom img-cursor" src="img/acm135Prob.png" alt="" style="height: 400px;">
+                        <a href="img/acm135Prob.png" target="_blank"><img class="card-img-bottom img-cursor" src="img/acm135Prob.png" alt="" style="height: 400px;"></a>
                     </div>
                 </div>
               
@@ -66,7 +66,7 @@
                           <p class="lead"> Given a value, n, print an nxn matrix that displays a series of nested rows and columns such that the outer layer starts with 1, and increases the deeper you go. 
                           </p>
                         </div>
-                        <img class="card-img-bottom img-cursor" src="img/acm202Prob.png" alt="" style="height: 400px;">
+                        <a href="img/acm202Prob.png" target="_blank"><img class="card-img-bottom img-cursor" src="img/acm202Prob.png" alt="" style="height: 400px;"></a>
                     </div>
                 </div>
 
@@ -79,7 +79,7 @@
                           <p class="lead"> Given a sequence of numbers, construct a Binary Search Tree and find the standard deviation of the leaf nodes.
                           </p>
                         </div>
-                        <img class="card-img-bottom img-cursor" src="img/acm302Prob.png" alt="" style="height: 400px;">
+                        <a href="img/acm302Prob.png" target="_blank"><img class="card-img-bottom img-cursor" src="img/acm302Prob.png" alt="" style="height: 400px;"></a>
                     </div>
                 </div>
     
