Added the meetup location and time, removed flyer

--- a/index1.html
+++ b/index1.html
@@ -58,6 +58,9 @@
                     <a class="nav-link js-scroll-trigger" href="#services">Opportunities</a>
                 </li>
                 <li class="nav-item">
+                  <a class="nav-link js-scroll-trigger" href="#meetups">Meetups</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
                 </li>
             </ul>
@@ -69,7 +72,6 @@
       <div class="container container-table text-center">
         <h1 class="display-4 text-white">Welcome to UNLV ACM's Web Page!</h1>
         <p class="lead">You will find everything about UNLV ACM here!</p>
-        <a href="img/Fall18_FrstMeetFlyer-1.jpg" role="button" class="btn btn-outline-light" target="_blank">Our First Meeting</a>
         <a href="problems.html" role="button" class="btn btn-outline-light" target="_blank">Coding Problems</a>
       </div>
     </header>
@@ -123,6 +125,19 @@
               </div>
             </div>
 
+        </div>
+      </div>
+    </section>
+
+    <section id="meetups">
+      <div class="container">
+        <div class="row">
+          <h2 class="col-lg-8 mx-auto text-center">Our Coding Meetups</h2>
+          <p class="lead text-center mx-auto">
+            Come to our code meetups to practice problems for ICPC, and sharpen your coding skills. Bring your laptops!<br><br>
+            <strong>When:</strong> This Saturday at 2 pm<br>
+            <strong>Where:</strong> TBE-B 346
+          </p>
         </div>
       </div>
     </section>
