--- a/problems.html
+++ b/problems.html
@@ -50,7 +50,7 @@
                           <h4 class="card-title">
                             CS 135
                           </h4>
-                          <p class="lead"> Given a value, n, determine if n is a power of 2.
+                          <p class="lead"> Given an array of numbers in random order, find the 3rd largest number.
                           </p>
                         </div>
                         <a href="img/acm135Prob.png" target="_blank"><img class="card-img-bottom img-cursor" src="img/acm135Prob.png" alt="" style="height: 400px;"></a>
@@ -63,7 +63,7 @@
                           <h4 class="card-title">
                             CS 202
                           </h4>
-                          <p class="lead"> Given a value, n, print an nxn matrix that displays a series of nested rows and columns such that the outer layer starts with 1, and increases the deeper you go. 
+                          <p class="lead"> Given the numbers 1 through n (n <= 1,000,000) in random order, one number is missing. Find that number. 
                           </p>
                         </div>
                         <a href="img/acm202Prob.png" target="_blank"><img class="card-img-bottom img-cursor" src="img/acm202Prob.png" alt="" style="height: 400px;"></a>
@@ -76,7 +76,7 @@
                           <h4 class="card-title">
                             CS 302
                           </h4>
-                          <p class="lead"> Given a sequence of numbers, construct a Binary Search Tree and find the standard deviation of the leaf nodes.
+                          <p class="lead"> Given an array of numbers (size <= 10,000) in random order, one of those numbers appears twice. Find that number.
                           </p>
                         </div>
                         <a href="img/acm302Prob.png" target="_blank"><img class="card-img-bottom img-cursor" src="img/acm302Prob.png" alt="" style="height: 400px;"></a>
