--- a/index1.html
+++ b/index1.html
@@ -72,7 +72,8 @@
       <div class="container container-table text-center">
         <h1 class="display-4 text-white">Welcome to UNLV ACM's Web Page!</h1>
         <p class="lead">You will find everything about UNLV ACM here!</p>
-        <a href="problems.html" role="button" class="btn btn-outline-light" target="_blank">Coding Problems</a>
+        <a href="img/Fall18_HolidaySpecialFlyer.png" role="button" class="btn btn-outline-light" target="_blank">Come to our Holiday Special!</a>
+        <a href="img/licensePlate.pdf" role="button" class="btn btn-outline-light" target="_blank">Solve an ICPC Problem!</a>
       </div>
     </header>
 
@@ -82,7 +83,7 @@
           <div class="col-lg-8 mx-auto">
             <h2 class="text-center">About Us</h2>
             <p class="lead">
-              Founded in 1947, the Association for Computing Machinery (ACM) is the world’s largest scientific and education computing society. Our school chapter UNLV ACM works to connect student by hosting workshops, lectures, attending seminars, and competing in regional coding competitions. Learn from professionals in the industry, gain coding experience, and land internships! Anyone with a passion for coding or for Computer Science are welcome to join!
+              Founded in 1947, the Association for Computing Machinery (ACM) is the world’s largest scientific and education computing society. Our school chapter UNLV ACM works to connect student by hosting workshops, lectures, attending seminars, and competing in regional coding competitions. We learn from professionals in the industry, gain coding experience, and land internships! Anyone with a passion for coding or for Computer Science are welcome to join!
             </p>
           </div>
         </div>
@@ -101,7 +102,7 @@
                 </a>  
                 <div class="card-body">
                   <h4>
-                    <a data-toggle="modal" data-target="#modICPC" class="img-cursor">ICPC</a>
+                    <a data-toggle="modal" data-target="#modICPC" class="img-cursor text-center">ICPC</a>
                   </h4>
                   <p class="lead">
                     Every November, UNLV ACM members compete in the International Collegiate Programming Competition (ICPC) Southern California Regional Contest held in Riverside, CA. There students have a chance to show off their coding skills and gain competition experience with other university students.                  </p>
@@ -134,9 +135,7 @@
         <div class="row">
           <h2 class="col-lg-8 mx-auto text-center">Our Coding Meetups</h2>
           <p class="lead text-center mx-auto">
-            Come to our code meetups to practice problems for ICPC, and sharpen your coding skills. Bring your laptops!<br><br>
-            <strong>When:</strong> This Saturday at 2 pm<br>
-            <strong>Where:</strong> TBE-B 346
+            ICPC Coding Meetings will resume in Spring 2019 after winter break. Stay tuned for more info! <br>
           </p>
         </div>
       </div>
