--- a/index1.html
+++ b/index1.html
@@ -72,7 +72,7 @@
       <div class="container container-table text-center">
         <h1 class="display-4 text-white">Welcome to UNLV ACM's Web Page!</h1>
         <p class="lead">You will find everything about UNLV ACM here!</p>
-        <a href="img/Fall18_HolidaySpecialFlyer.png" role="button" class="btn btn-outline-light" target="_blank">Come to our Holiday Special!</a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfPZPnKJSvBBqhouWbTMuKtS3YR-dAh5t-Z4IEVVm2PMRQi6Q/viewform?usp=sf_link" role="button" class="btn btn-outline-light" target="_blank">Become an Officer!</a>
         <a href="img/licensePlate.pdf" role="button" class="btn btn-outline-light" target="_blank">Solve an ICPC Problem!</a>
       </div>
     </header>
