--- a/index1.html
+++ b/index1.html
@@ -72,8 +72,17 @@
       <div class="container container-table text-center">
         <h1 class="display-4 text-white">Welcome to UNLV ACM's Web Page!</h1>
         <p class="lead">You will find everything about UNLV ACM here!</p>
+
+<!-- ED'S CHANGES 2/24 -->        
+        <a href="img/genMeetSp19.jpg" role="button" class="btn btn-outline-light" target="_blank">Sp’ 19 First General Meeting</a>
+        <a href="img/codeMeetSp19.pdf" role="button" class="btn btn-outline-light" target="_blank">Dates for ICPC Coding Meetups</a>
+<!-- ED'S CHANGES 2/24 -->
+
+<!--  DELETED 2/24
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfPZPnKJSvBBqhouWbTMuKtS3YR-dAh5t-Z4IEVVm2PMRQi6Q/viewform?usp=sf_link" role="button" class="btn btn-outline-light" target="_blank">Become an Officer!</a>
         <a href="img/licensePlate.pdf" role="button" class="btn btn-outline-light" target="_blank">Solve an ICPC Problem!</a>
+-->
+
       </div>
     </header>
 
@@ -135,7 +144,15 @@
         <div class="row">
           <h2 class="col-lg-8 mx-auto text-center">Our Coding Meetups</h2>
           <p class="lead text-center mx-auto">
-            ICPC Coding Meetings will resume in Spring 2019 after winter break. Stay tuned for more info! <br>
+
+<!-- ED'S CHANGES 2/24 -->
+            <br>
+            Come to our ICPC Coding Meetups! We meet up, discuss coding problems, <br>
+            and prep for ICPC (our coding competition in California) 2-3 times a month. <br><br>
+
+            <a href="img/codeMeetSp19.pdf" role="button" class="btn btn-primary" target="_blank">Click for Coding Meetup Dates</a>
+<!-- ED'S CHANGES 2/24 -->
+
           </p>
         </div>
       </div>
