--- a/index.html
+++ b/index.html
@@ -204,7 +204,12 @@
               </div>
             </div>
 
-            <div data-netlify-recaptcha="true"></div>
+            <div class="row">
+              <div class="col-md-12 mx-auto">
+                <div data-netlify-recaptcha="true"></div>
+              </div>
+            </div>
+
             <p>
               <button class="btn btn-outline-light" type="submit">Send</button>
             </p>
