--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             </div>
 
             <div class="row">
-              <div class="col-md-12 mx-auto">
+              <div class="col-md-12 mx-auto justify-content-center">
                 <div data-netlify-recaptcha="true"></div>
               </div>
             </div>
