Changed button text from general meetup to coding meetup

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
       <!-- ED'S CHANGES 2/24, 3/5 -->
       <a href="img/ACM_Fall2019FirstCodingMeetup.pdf" role="button" class="btn btn-outline-light" target="_blank">Fall
-        19 First General Meeting</a>
+        19 First Coding Meetup</a>
       <!-- <a href="img/Sp 19 Coding Meetup Flyer2.pdf" role="button" class="btn btn-outline-light" target="_blank">ICPC Coding Meetups</a> -->
       <!-- ED'S CHANGES 2/24, 3/5 -->
 
