Attempt to center captcha

--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
             </div>
 
             <div class="row">
-              <div class="col-md-12 mx-auto justify-content-center">
-                <div data-netlify-recaptcha="true"></div>
+              <div class="col-md-12 mx-auto" style="text-align: center">
+                <div data-netlify-recaptcha="true" style="display:inline-block"></div>
               </div>
             </div>
 
