--- a/icpcsubmit.html
+++ b/icpcsubmit.html
@@ -55,7 +55,7 @@
       <div class="row text-black">
         <h2 class="col-lg-8 mx-auto text-center">Submit Icpc Problem</h2>
         <div class="col-lg-8 mx-auto text-center">
-          <form name="contact" method="POST" data-netlify="true" data-netlify-recaptcha="true">
+          <form name="ICPCsubmission" method="POST" data-netlify="true" data-netlify-recaptcha="true">
             <div class="row">
               <div class="col-md-6">
                 <p>
