--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
             <a class="nav-link js-scroll-trigger" href="#meetups">Meetups</a>
           </li>
           <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#calendar">Calendar</a>
+            </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
         </ul>
@@ -166,6 +169,12 @@
 
         </p>
       </div>
+    </div>
+  </section>
+
+  <section id="calendar" class="bg-light">
+    <div class="container">
+        <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FLos_Angeles&amp;src=YWNtQHVubHYuZWR1&amp;src=amZ1ZXRkN2w3YWY4aDBiZ2JpN2lrNjNwaWdAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;src=YWRkcmVzc2Jvb2sjY29udGFjdHNAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;color=%237986CB&amp;color=%23795548&amp;color=%2333B679&amp;color=%23009688" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
     </div>
   </section>
 
