--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
   </section>
 
   <section id="calendar" class="bg-light">
-    <div class="container">
-        <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FLos_Angeles&amp;src=YWNtQHVubHYuZWR1&amp;src=amZ1ZXRkN2w3YWY4aDBiZ2JpN2lrNjNwaWdAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;src=YWRkcmVzc2Jvb2sjY29udGFjdHNAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;color=%237986CB&amp;color=%23795548&amp;color=%2333B679&amp;color=%23009688" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+    <div class="container" style="text-align:center">
+        <iframe style="display: inline-block" src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FLos_Angeles&amp;src=YWNtQHVubHYuZWR1&amp;src=amZ1ZXRkN2w3YWY4aDBiZ2JpN2lrNjNwaWdAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;src=YWRkcmVzc2Jvb2sjY29udGFjdHNAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;color=%237986CB&amp;color=%23795548&amp;color=%2333B679&amp;color=%23009688" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
     </div>
   </section>
 
