Altered the location of the calendar from #calendar to #meetups and changed 'Our coding meetups' to 'our meetups'

--- a/index.html
+++ b/index.html
@@ -63,9 +63,6 @@
             <a class="nav-link js-scroll-trigger" href="#meetups">Meetups</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#calendar">Calendar</a>
-            </li>
-          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
         </ul>
@@ -156,26 +153,18 @@
   <section id="meetups">
     <div class="container">
       <div class="row">
-        <h2 class="col-lg-8 mx-auto text-center">Our Coding Meetups</h2>
+        <h2 class="col-lg-8 mx-auto text-center">Our Meetups</h2>
         <p class="lead text-center mx-auto">
 
           <!-- ED'S CHANGES 2/24, 3/5 -->
           <br>
           Come to our ICPC Coding Meetups! We meet up, discuss coding problems, <br>
           and prep for ICPC (our coding competition in California) every Saturday. <br><br>
-
-          <a href="img/Sp 19 Coding Meetup Flyer2.pdf" role="button" class="btn btn-primary" target="_blank">Click for
-            Coding Meetup Info</a>
+          <iframe style="display: inline-block" src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FLos_Angeles&amp;src=YWNtQHVubHYuZWR1&amp;src=amZ1ZXRkN2w3YWY4aDBiZ2JpN2lrNjNwaWdAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;src=YWRkcmVzc2Jvb2sjY29udGFjdHNAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;color=%237986CB&amp;color=%23795548&amp;color=%2333B679&amp;color=%23009688" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
           <!-- ED'S CHANGES 2/24, 3/5 -->
 
         </p>
       </div>
-    </div>
-  </section>
-
-  <section id="calendar" class="bg-light">
-    <div class="container" style="text-align:center">
-        <iframe style="display: inline-block" src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FLos_Angeles&amp;src=YWNtQHVubHYuZWR1&amp;src=amZ1ZXRkN2w3YWY4aDBiZ2JpN2lrNjNwaWdAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;src=YWRkcmVzc2Jvb2sjY29udGFjdHNAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;color=%237986CB&amp;color=%23795548&amp;color=%2333B679&amp;color=%23009688" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
     </div>
   </section>
 
