--- a/icpcsubmit.html
+++ b/icpcsubmit.html
@@ -41,12 +41,12 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-unlvRed fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">
+      <a class="navbar-brand js-scroll-trigger" href="index.html">
         <img src="img/acm_logo2.png" style="height: 40px; width: 50px;">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
         aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon"></span> 
       </button>
     </div>
   </nav>
