--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <!-- ED'S CHANGES 2/24, 3/5 -->
       <a href="img/Fall19_PrelimICPCFlyerQR.pdf" role="button" class="btn btn-outline-light" target="_blank">Preliminary ICPC Flyer</a>
       <a href="img/Rules for 2019 UNLV ACM’s Preliminary ICPC.pdf" role="button" class="btn btn-outline-light" target="_blank">Preliminary ICPC Rules</a>
-      <a href="https://drive.google.com/open?id=1AoxYywB3BsHXQT_VKIxrgpJCwNfB0lVHz4ObWb4SOXc" role="button" class="btn btn-outline-light" target="_blank">Preliminary ICPC Team Form</a>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSftLn_tFL2jj3EIXbrvnU3lGar44XEznpQdP8ob9Lh0yeVLuQ/viewform?usp=sf_link" role="button" class="btn btn-outline-light" target="_blank">Preliminary ICPC Team Form</a>
       <!-- <a href="img/Sp 19 Coding Meetup Flyer2.pdf" role="button" class="btn btn-outline-light" target="_blank">ICPC Coding Meetups</a> -->
       <!-- ED'S CHANGES 2/24, 3/5 -->
 
