--- a/index.html
+++ b/index.html
@@ -53,11 +53,14 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
+            <li style="float: left;" class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="#icpcsubmit">Submit Your ICPC Problems</a>
+              </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services">Opportunities</a>
+            <a class="nav-link js-scroll-trigger" href="#services">Opportunitiess</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#meetups">Meetups</a>
