--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
         aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+      <li style="float: left;" class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="icpcsubmit">Submit Your ICPC Problems</a>
+        </li>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
-            <li style="float: left;" class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#icpcsubmit">Submit Your ICPC Problems</a>
-              </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
