still working on the button

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
         aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <li style="float: left;" class="nav-item">
+      <div style="float: left;" class="nav-item">
           <a class="nav-link js-scroll-trigger" href="icpcsubmit">Submit Your ICPC Problems</a>
-        </li>
+      </div>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
