--- a/index.html
+++ b/index.html
@@ -52,8 +52,15 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div style="float: left;" class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="icpcsubmit">Submit Your ICPC Problems</a>
-      </div>
+          <a class="nav-link js-scroll-trigger" href="icpcsubmit" style="
+                  text-decoration: none;
+                  color: black;
+                  font-weight: 700;
+                  font-size: 16px;
+                  background-color: #ffc107;
+                  border-radius: 6px;
+              ">Submit Your ICPC Problems</a>
+        </div>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
