Changed Weekly problem

--- a/icpcsubmit.html
+++ b/icpcsubmit.html
@@ -75,9 +75,7 @@
                 <p>
                   Selected Problem
                   <select class="form-control" type="text" name="problemId" required>
-                    <option value="savagepokemon">Savage Pokemon</option>
-                    <option value="empty">Second Option</option>
-
+                    <option value="rainbowRoad">Rainbow Roads</option>
                   </select>
                 </p>
               </div>
