--- a/index.html
+++ b/index.html
@@ -86,9 +86,7 @@
       <p class="lead">You will find everything about UNLV ACM here!</p>
 
       <!-- ED'S CHANGES 2/24, 3/5 -->
-      <a href="img/Fall19_PrelimICPCFlyerQR.pdf" role="button" class="btn btn-outline-light" target="_blank">Preliminary ICPC Flyer</a>
-      <a href="img/Rules for 2019 UNLV ACM’s Preliminary ICPC.pdf" role="button" class="btn btn-outline-light" target="_blank">Preliminary ICPC Rules</a>
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSftLn_tFL2jj3EIXbrvnU3lGar44XEznpQdP8ob9Lh0yeVLuQ/viewform?usp=sf_link" role="button" class="btn btn-outline-light" target="_blank">Preliminary ICPC Team Form</a>
+      <a href="https://mailchi.mp/a21e4275b0fc/unlv-acm-unlv-acm-prelims-icpc-results" role="button" class="btn btn-outline-light" target="_blank">Results from UNLVACM ICPC prelims</a>
       <!-- <a href="img/Sp 19 Coding Meetup Flyer2.pdf" role="button" class="btn btn-outline-light" target="_blank">ICPC Coding Meetups</a> -->
       <!-- ED'S CHANGES 2/24, 3/5 -->
 
