Changed the button name

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <p class="lead">You will find everything about UNLV ACM here!</p>
 
       <!-- ED'S CHANGES 2/24, 3/5 -->
-      <a href="https://mailchi.mp/a21e4275b0fc/unlv-acm-unlv-acm-prelims-icpc-results" role="button" class="btn btn-outline-light" target="_blank">Results from UNLVACM ICPC prelims</a>
+      <a href="https://mailchi.mp/a21e4275b0fc/unlv-acm-unlv-acm-prelims-icpc-results" role="button" class="btn btn-outline-light" target="_blank">Results from the ICPC Prelims!</a>
       <!-- <a href="img/Sp 19 Coding Meetup Flyer2.pdf" role="button" class="btn btn-outline-light" target="_blank">ICPC Coding Meetups</a> -->
       <!-- ED'S CHANGES 2/24, 3/5 -->
 
