--- a/icpcsubmit.html
+++ b/icpcsubmit.html
@@ -75,7 +75,7 @@
                 <p>
                   Selected Problem
                   <select class="form-control" type="text" name="problemId" required>
-                    <option value="rainbowRoad">Rainbow Roads</option>
+                    <option value="Magical3">The Magical 3</option>
                   </select>
                 </p>
               </div>
