updated for mock icpc 10-19-19

--- a/index.html
+++ b/index.html
@@ -52,15 +52,8 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div style="float: left;" class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="icpcsubmit" style="
-                  text-decoration: none;
-                  color: black;
-                  font-weight: 700;
-                  font-size: 16px;
-                  background-color: #ffc107;
-                  border-radius: 6px;
-              ">Submit Your ICPC Problems</a>
-        </div>
+        <a class="nav-link js-scroll-trigger icpc-submit-btn" href="icpcsubmit.html">Submit Your ICPC Problems</a>
+      </div>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
@@ -86,7 +79,10 @@
       <p class="lead">You will find everything about UNLV ACM here!</p>
 
       <!-- ED'S CHANGES 2/24, 3/5 -->
-      <a href="https://mailchi.mp/a21e4275b0fc/unlv-acm-unlv-acm-prelims-icpc-results" role="button" class="btn btn-outline-light" target="_blank">Results from the ICPC Prelims!</a>
+      <a href="img/mockIcpc10-19-19.zip" role="button" class="btn btn-outline-light" target="_blank">Mock ICPC 10-19-19
+        Sample Input</a>
+      <a href="img/Rules for 2019 UNLV ACM’s Mock ICPC.pdf" role="button" class="btn btn-outline-light"
+        target="_blank">Mock ICPC Rules</a>
       <!-- <a href="img/Sp 19 Coding Meetup Flyer2.pdf" role="button" class="btn btn-outline-light" target="_blank">ICPC Coding Meetups</a> -->
       <!-- ED'S CHANGES 2/24, 3/5 -->
 
@@ -168,7 +164,9 @@
           <br>
           Come to our ICPC Coding Meetups! We meet up, discuss coding problems, <br>
           and prep for ICPC (our coding competition in California) every Saturday. <br><br>
-          <iframe style="display: inline-block" src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FLos_Angeles&amp;src=YWNtQHVubHYuZWR1&amp;src=amZ1ZXRkN2w3YWY4aDBiZ2JpN2lrNjNwaWdAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;src=YWRkcmVzc2Jvb2sjY29udGFjdHNAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;color=%237986CB&amp;color=%23795548&amp;color=%2333B679&amp;color=%23009688" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+          <iframe style="display: inline-block"
+            src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FLos_Angeles&amp;src=YWNtQHVubHYuZWR1&amp;src=amZ1ZXRkN2w3YWY4aDBiZ2JpN2lrNjNwaWdAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;src=YWRkcmVzc2Jvb2sjY29udGFjdHNAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;color=%237986CB&amp;color=%23795548&amp;color=%2333B679&amp;color=%23009688"
+            style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
           <!-- ED'S CHANGES 2/24, 3/5 -->
 
         </p>
@@ -186,19 +184,19 @@
             <div class="row">
               <div class="col-md-6">
                 <p>
-                  Your Name <input class="form-control" type="text" name="name" required/>
+                  Your Name <input class="form-control" type="text" name="name" required />
                 </p>
               </div>
               <div class="col-md-6">
                 <p>
-                  Your Email <input class="form-control" type="email" name="email" required/>
+                  Your Email <input class="form-control" type="email" name="email" required />
                 </p>
               </div>
             </div>
             <div class="row">
               <div class="col-md-12">
                 <p>
-                  Subject <input class="form-control" type="text" name="subject" required/>
+                  Subject <input class="form-control" type="text" name="subject" required />
                 </p>
               </div>
             </div>
