--- a/icpcsubmit.html
+++ b/icpcsubmit.html
@@ -75,7 +75,12 @@
                 <p>
                   Selected Problem
                   <select class="form-control" type="text" name="problemId" required>
-                    <option value="Magical3">The Magical 3</option>
+                    <option value="ZombieBlast">Zombie Blast!</option>
+                    <option value="ParlayWagering">Parlay Wagering</option>
+                    <option value="AtlasPagination">Atlas Pagination</option>
+                    <option value="DocumentArchives">Document Archives</option>
+                    <option value="BeepBeep">BeepBeep</option>
+                    <option value="DisasterRecoveryPlans">Disaster Recovery Plans</option>
                   </select>
                 </p>
               </div>
