updated problem set and drop down for mock icpc 10-26-19

--- a/icpcsubmit.html
+++ b/icpcsubmit.html
@@ -75,12 +75,12 @@
                 <p>
                   Selected Problem
                   <select class="form-control" type="text" name="problemId" required>
-                    <option value="ZombieBlast">Zombie Blast!</option>
-                    <option value="ParlayWagering">Parlay Wagering</option>
-                    <option value="AtlasPagination">Atlas Pagination</option>
-                    <option value="DocumentArchives">Document Archives</option>
-                    <option value="BeepBeep">BeepBeep</option>
-                    <option value="DisasterRecoveryPlans">Disaster Recovery Plans</option>
+                    <option value="copPrimeInts">Cop Prime Ints</option>
+                    <option value="copsAndRobbers">Cops And Robbers</option>
+                    <option value="eulersNumber">Eulers Number</option>
+                    <option value="pairwisevoting">Pairwise Voting</option>
+                    <option value="pokerhand">Pokerhand</option>
+                    <option value="yatzee">Yatzee</option>
                   </select>
                 </p>
               </div>
