updated problem set and dropdown submit list for 11-2 mock icpc

--- a/icpcsubmit.html
+++ b/icpcsubmit.html
@@ -75,12 +75,10 @@
                 <p>
                   Selected Problem
                   <select class="form-control" type="text" name="problemId" required>
-                    <option value="copPrimeInts">Cop Prime Ints</option>
-                    <option value="copsAndRobbers">Cops And Robbers</option>
-                    <option value="eulersNumber">Eulers Number</option>
-                    <option value="pairwisevoting">Pairwise Voting</option>
-                    <option value="pokerhand">Pokerhand</option>
-                    <option value="yatzee">Yatzee</option>
+                    <option value="p5208">  p5208 </option>
+                    <option value="p5215">  p5215 </option>
+                    <option value="p5245">  p5245 </option>
+                    <option value="p5246">  p5246 </option>
                   </select>
                 </p>
               </div>
