--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <p class="lead">You will find everything about UNLV ACM here!</p>
 
       <!-- ED'S CHANGES 2/24, 3/5 -->
-      <a href="img/mockICPC10-26-19.zip" role="button" class="btn btn-outline-light" target="_blank">Mock ICPC 10-26-19
+      <a href="img/mockIcpc11-2-19.zip" role="button" class="btn btn-outline-light" target="_blank">Mock ICPC 11-2-19
         Sample Input</a>
       <a href="img/Rules for 2019 UNLV ACM’s Mock ICPC.pdf" role="button" class="btn btn-outline-light"
         target="_blank">Mock ICPC Rules</a>
