--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services">Opportunitiess</a>
+            <a class="nav-link js-scroll-trigger" href="#services">Opportunities</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#meetups">Meetups</a>
@@ -101,7 +101,7 @@
           <h2 class="text-center">About Us</h2>
           <p class="lead">
             Founded in 1947, the Association for Computing Machinery (ACM) is the world’s largest scientific and
-            education computing society. Our school chapter UNLV ACM works to connect student by hosting workshops,
+            education computing society. Our school chapter, UNLV ACM, works to connect student by hosting workshops,
             lectures, attending seminars, and competing in regional coding competitions. We learn from professionals in
             the industry, gain coding experience, and land internships! Anyone with a passion for coding or for Computer
             Science are welcome to join!
