raise front title

--- a/index.html
+++ b/index.html
@@ -92,15 +92,16 @@
       <!-- Contains heading text and buttons -->
       <div id="headline">
       <div id="headline_container"> 
-        
-        <h1 class="headline_title text-white">Welcome to UNLV ACM's Web Page!</h1>
-        <p class="headline_lead">You will find everything about UNLV ACM here!</p>
-        <div>
-          <a href="img/mockIcpc11-2-19.zip" role="button" class="btn btn-outline-light" target="_blank">Mock ICPC 11-2-19
-          Sample Input</a>
-          <a href="img/Rules for 2019 UNLV ACM’s Mock ICPC.pdf" role="button" class="btn btn-outline-light"
-          target="_blank">Mock ICPC Rules</a>
-          <a href="img/Sp 19 Coding Meetup Flyer2.pdf" role="button" class="btn btn-outline-light" target="_blank">ICPC Coding Meetups</a>
+        <div id="frontText">
+          <h1 class="headline_title text-white">Welcome to UNLV ACM's Web Page!</h1>
+          <p class="headline_lead">You will find everything about UNLV ACM here!</p>
+          <div>
+            <a href="img/mockIcpc11-2-19.zip" role="button" class="btn btn-outline-light" target="_blank">Mock ICPC 11-2-19
+            Sample Input</a>
+            <a href="img/Rules for 2019 UNLV ACM’s Mock ICPC.pdf" role="button" class="btn btn-outline-light"
+            target="_blank">Mock ICPC Rules</a>
+            <a href="img/Sp 19 Coding Meetup Flyer2.pdf" role="button" class="btn btn-outline-light" target="_blank">ICPC Coding Meetups</a>
+          </div>
         </div>
       </div>
       </div>
