--- a/index.html
+++ b/index.html
@@ -119,26 +119,20 @@
                     <div class="contact_icons">
 
                         <!-- Start Twitter -->
-                        <div class="contact_icon">
-                            <a href="https://twitter.com/unlv_acm?lang=en">
-                                <i class="fab fa-twitter fa-2x"></i>
-                            </a>
+                        <div class="contact_icon fab fa-twitter fa-2x">
+                            <a href="https://twitter.com/unlv_acm?lang=en"></a>
                         </div>
                         <!-- End Twitter -->
 
                         <!-- Start Instagram -->
-                        <div class="contact_icon">
-                            <a href="https://www.instagram.com/unlvacm/">
-                                <i class="fab fa-instagram fa-2x"></i>
-                            </a>
+                        <div class="contact_icon fab fa-instagram fa-2x">
+                            <a href="https://www.instagram.com/unlvacm/"></a>
                         </div>
                         <!-- End Instagram -->
 
                         <!-- Start Facebook -->
-                        <div class="contact_icon">
-                            <a href="https://www.facebook.com/unlvacm/">
-                                <i class="fab fa-facebook-f fa-2x"></i>
-                            </a>
+                        <div class="contact_icon fab fa-facebook-f fa-2x">
+                            <a href="https://www.facebook.com/unlvacm/"></a>
                         </div>
                         <!-- End Facebook -->
 
