--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <div class="header_logo"></div>
                 <div class="header_navigation_item" id="navigation_about"         ><a href="#section_1">About</a></div>
                 <div class="header_navigation_item" id="navigation_opportunities" ><a href="#section_2">Opportunities</a></div>
-                <div class="header_navigation_item" id="navigation_meetups"       ><a href="#section_3">About</a></div>
+                <div class="header_navigation_item" id="navigation_meetups"       ><a href="#section_3">Meetups</a></div>
 
             </div>
             <!-- End Header -->
